src/test/ui/macros/missing-comma.stderr
error: expected token: `,`
  --> $DIR/missing-comma.rs:15:19
   |
LL |     println!("{}" a);
   |                   ^

error: no rules expected the token `b`
  --> $DIR/missing-comma.rs:17:12
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a b);
   |           -^ no rules expected this token in macro call
   |           |
   |           help: missing comma here

error: no rules expected the token `e`
  --> $DIR/missing-comma.rs:19:21
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a, b, c, d e);
   |                    -^ no rules expected this token in macro call
   |                    |
   |                    help: missing comma here

error: no rules expected the token `d`
  --> $DIR/missing-comma.rs:21:18
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a, b, c d, e);
   |                 -^ no rules expected this token in macro call
   |                 |
   |                 help: missing comma here

error: no rules expected the token `d`
  --> $DIR/missing-comma.rs:23:18
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a, b, c d e);
   |                  ^ no rules expected this token in macro call

error: unexpected end of macro invocation
  --> $DIR/missing-comma.rs:25:23
   |
LL | macro_rules! bar {
   | ---------------- when calling this macro
...
LL |     bar!(Level::Error, );
   |                       ^ missing tokens in macro arguments

error: aborting due to 6 previous errors

